# libav-zmq-streaming

./: .gitignore  CMakeLists.txt  FindFFMPEG.cmake  FindLIBAV.cmake  Makefile  Makefile.ffmpeg-master  README.md  avreceiver.cpp  avreceiver.hpp  avtransmitter.cpp  avtransmitter.hpp  avutils.cpp  avutils.hpp  backup.cpp  decode_rtp.cpp  decode_video_zmq.cpp  encode_from_zmq.cpp  encode_spinnaker.cpp  encode_video_fromdir.cpp  encode_video_zmq.cpp  rtp_receiver.cpp  rtp_receiver.hpp  time_functions.hpp
cmake/: FindFFMPEG.cmake  Findtclap.cmake
sdp_files/: test0.sdp  test1.sdp
